--- a/apps/docs/.env
+++ b/apps/docs/.env
@@ -1,4 +1,5 @@
-API_URL=http://localhost:3001/
+; API_URL=http://localhost:3000
+API_URL=https://api-docs.test.tglsupplies.com
 DOCS_ALGOLIA_INDEX_NAME=
 API_ALGOLIA_INDEX_NAME=
 ALGOLIA_API_KEY=
@@ -8,4 +9,3 @@ AI_API_ASSISTANT_TOKEN=
 AI_WEBSITE_ID=
 AI_API_ASSISTANT_RECAPTCHA_SITE_KEY=
 CLOUDINARY_CLOUD_NAME=dza7lstvk
-NEXT_PUBLIC_BASE_URL=http://localhost:3000/
