--- a/apps/docs/.env
+++ b/apps/docs/.env
@@ -1,5 +1,6 @@
 ; API_URL=http://localhost:3000
-API_URL=https://api-docs.test.tglsupplies.com
+; API_URL=https://api-docs.test.tglsupplies.com
+API_URL=https://tgl-api-docs.netlify.app
 DOCS_ALGOLIA_INDEX_NAME=
 API_ALGOLIA_INDEX_NAME=
 ALGOLIA_API_KEY=
