--- a/apps/api-reference/.env
+++ b/apps/api-reference/.env
@@ -7,8 +7,10 @@ NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ENV=
 ; NEXT_PUBLIC_BASE_URL=http://localhost:3000
 ; NEXT_PUBLIC_DOCS_URL=http://localhost:3001
-NEXT_PUBLIC_BASE_URL=https://api-docs.test.tglsupplies.com
-NEXT_PUBLIC_DOCS_URL=https://docs.test.tglsupplies.com
+; NEXT_PUBLIC_BASE_URL=https://api-docs.test.tglsupplies.com
+; NEXT_PUBLIC_DOCS_URL=https://docs.test.tglsupplies.com
+NEXT_PUBLIC_BASE_URL=https://tgl-api-docs.netlify.app
+NEXT_PUBLIC_DOCS_URL=https://tgl-docs.netlify.app
 NEXT_PUBLIC_UI_URL=
 ALGOLIA_WRITE_API_KEY=
 NEXT_PUBLIC_AI_ASSISTANT_URL=
