--- a/apps/api-reference/package.json
+++ b/apps/api-reference/package.json
@@ -7,7 +7,8 @@
     "dev:monorepo": "yarn dev -p 3000",
     "build": "next build",
     "build:dev": "NODE_ENV=test next build",
-    "start": "next start",
+    "start:original": "next start",
+    "start": "yarn start -p 3000",
     "start:monorepo": "yarn start -p 3000",
     "lint": "next lint --fix"
   },
