--- a/apps/api-reference/.env
+++ b/apps/api-reference/.env
@@ -4,7 +4,7 @@ NEXT_PUBLIC_DOCS_ALGOLIA_INDEX_NAME=
 NEXT_PUBLIC_API_ALGOLIA_INDEX_NAME=
 NEXT_PUBLIC_ALGOLIA_API_KEY=
 NEXT_PUBLIC_ALGOLIA_APP_ID=
-NEXT_PUBLIC_ENV=
+NEXT_PUBLIC_ENV=production
 ; NEXT_PUBLIC_BASE_URL=http://localhost:3000
 ; NEXT_PUBLIC_DOCS_URL=http://localhost:3001
 ; NEXT_PUBLIC_BASE_URL=https://api-docs.test.tglsupplies.com
