--- a/apps/ui/vercel.json
+++ b/apps/ui/vercel.json
@@ -2,5 +2,6 @@
   "framework": "nextjs",
   "installCommand": "yarn install",
   "buildCommand": "turbo run build",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "ignoreCommand": "bash ../../ignore-build-script.sh"
 }
