--- a/apps/docs/vercel.json
+++ b/apps/docs/vercel.json
@@ -486,5 +486,6 @@
   "installCommand": "yarn install",
   "buildCommand": "turbo run build",
   "outputDirectory": "build",
+  "ignoreCommand": "bash ../../ignore-build-script.sh",
   "devCommand": "yarn dev"
 }
