--- a/apps/api-reference/.env.production
+++ b/apps/api-reference/.env.production
@@ -6,7 +6,7 @@ NEXT_PUBLIC_ALGOLIA_API_KEY=
 NEXT_PUBLIC_ALGOLIA_APP_ID=
 NEXT_PUBLIC_ENV=production
 NEXT_PUBLIC_BASE_URL=https://tgl-api-docs.netlify.app
-NEXT_PUBLIC_DOCS_URL=https://docs.test.tglsupplies.com
+NEXT_PUBLIC_DOCS_URL=https://tgl-docs.netlify.app
 NEXT_PUBLIC_UI_URL=
 ALGOLIA_WRITE_API_KEY=
 NEXT_PUBLIC_AI_ASSISTANT_URL=
